Fix layout issues and enhance styling for better responsiveness and usability

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     box-sizing: border-box;
     background: #f0f0f0;
     /* min-height: 100vh; */
-    /* width: 100vw; */
+    width: 100%;
 }  
 h1{
     text-align: center;
@@ -18,7 +18,6 @@ h1{
     width: 100%;
     border: none;
     background-color: #f9f9f9;
-    padding-inline: 10px
 }
 #noteInput:focus{
     outline: none;
@@ -56,6 +55,7 @@ textarea{
     flex-direction: column;
     align-items: center;
     margin: 20px auto;
+    height: 15vh;
     justify-content: center;
     align-self: center;
     justify-self: center;
@@ -63,11 +63,10 @@ textarea{
     border: 1px solid #ccc;
     padding: 10px;
     width: 50%;
-    min-width: 250px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 #note{
-     min-height: 100px;
+     min-height: 20vh;
      width: 20%;
      border:1px solid gray;
      padding: 10px;
@@ -77,11 +76,17 @@ textarea{
      font-weight: bold;
      font-size: large;
      list-style-type: none;
+        background-color: white;
+        border-radius: 5px;
 }
-#notesContainer{
+#notesLists{
     width: 100%;
-}
-#noteLists{
+    padding: 0;
+    margin: 2% 5%; 
+    display: flex;
+    gap: 1%;
+    flex-wrap: wrap;
+
 }
 /* Responsive Design */
 @media (max-width: 900px) {
